[Task-11] Refactoring